# tmux-easy-motion

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  agent.md  easy_motion.tmux  tmux-easy-motion  tmux-easy-motion.tmux
.github/workflows/: ci.yml  release.yml
scripts/: common_variables.sh  easy_motion.sh  helpers.sh  options.sh  pipe_target_key.sh
src/: app.rs  config.rs  grouping.rs  main.rs  motion.rs  render.rs  terminal.rs  types.rs
tests/: e2e_tmux.rs  functional_sim_terminal.rs
